Fixed: Freetoolkits edge to edge on mobile

--- a/themes/inbeat/assets/scss/pages/_home.scss
+++ b/themes/inbeat/assets/scss/pages/_home.scss
@@ -278,10 +278,12 @@
 	.toolkits {
         .row{
          @include breakpoint(sm-down) {
-             overflow-x: auto;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-auto-rows: 1fr;
+                overflow-x: auto;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-auto-rows: 1fr;
+                margin: -1.25rem;
+                padding: 1.25rem;
             }
         }
 		.toolkit {
